--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
+body {
+  background: rgb(63, 94, 251);
+  background: radial-gradient(
+    circle,
+    rgba(63, 94, 251, 1) 0%,
+    rgba(252, 70, 107, 1) 100%
+  );
+}
+h2 {
+  color: yellow;
+  text-align: center;
+  font-size: 3rem;
+  text-shadow: 3px 3px #ff0000;
+}
+
+h3 {
+  color: rgb(0, 195, 255);
+  text-align: center;
+  font-size: 1.5rem;
+  text-shadow: 3px 3px #5900ff;
+}
+
+input {
+  color: Grey;
+  font-size: 1.2rem;
+  width: 50%;
+  display: block;
+  margin: 0 auto;
+}
+
+.card {
+  align-content: center;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  overflow: hidden;
+}
+
+.card-grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.card p {
+  padding: 5px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card img {
+  max-height: 170px;
 }
