modificaciones app.js

--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,12 @@ input {
 .card img {
   max-height: 170px;
 }
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: black;
+  text-align: center;
+}
